homework3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-basic
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: httpserver
